--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,49 +1,20 @@
 Package: nupoint
-Title: 2D distance sampling
-Version: 1.0.52
-Author: Martin Cox, David Borchers and Natalie Kelly
+Title: 2D Distance Sampling
+Version: 1.1.1
+Authors@R: 
+    c(person(given = "Martin", family = "Cox", email = "martin.cox@aad.gov.au", role = c("aut", "cre")),
+      person(given = "David", family = "Borchers", role = "aut"),
+      person(given = "Natalie", family = "Kelly", role = "aut"))
 Description: Provides functions to fit detection functions while allowing for
-    non-uniform distribution of objects (which vary with some underlying
-    environmental/spatial covariate) from a point transect. For R 3.0+
-Depends:
-    fields,
-    nor1mix
-Maintainer: Martin Cox <nupointR@gmail.com>
-License: GPL-2
-Collate:
-    'GoF.environ.fit.f.R'
-    'MBE.fit.f.R'
-    'boot.nupoint.env.R'
-    'bound.chk.R'
-    'detectF.R'
-    'distr.R'
-    'environ.fit.f.R'
-    'environ.mle.f.R'
-    'environ.simulator.f.R'
-    'est.abundance.from.sim.R'
-    'est.abundance.whales.R'
-    'histline.R'
-    'make.atten.f.R'
-    'mle.R'
-    'mnorm.f.R'
-    'norm.atten.gof.R'
-    'nupoint.boot.R'
-    'nupoint.env.boot.R'
-    'nupoint.env.fit.R'
-    'nupoint.env.gof.R'
-    'nupoint.env.simulator.R'
-    'nupoint.fit.R'
-    'nupoint.gof.R'
-    'nupoint.p.star.R'
-    'nupoint.vol.density.R'
-    'par.unpack.R'
-    'pi.z.f.R'
-    'shore.calc.integral.grid.R'
-    'shore.get.denominator.R'
-    'shore.get.denominator.mbe.r'
-    'shore.get.numerator.R'
-    'shore.get.numerator.mbe.R'
-    'shore.only.R'
-    'swathInOutF.R'
-    'truncate.R'
-    'tweedief.R'
+    non-uniform distribution of objects that vary with an underlying
+    environmental or spatial covariate, using data from point transects.
+Depends: R (>= 3.5.0)
+Imports: fields, nor1mix, FAmle, tweedie
+License: MIT + file LICENSE
+Encoding: UTF-8
+RoxygenNote: 7.3.2
+Suggests: 
+    knitr,
+    rmarkdown,
+    quarto
+VignetteBuilder: quarto
